--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Driver/Index.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Driver/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <h2>Drivers</h2>
-
+<p>
+    @Html.ActionLink("New Driver", "New", "Driver", null, new { @class = "btn btn.btn-primary" })
+</p>
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
