--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Driver/Index.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Driver/Index.cshtml
@@ -8,21 +8,69 @@
 <p>
     @Html.ActionLink("New Driver", "New", "Driver", null, new { @class = "btn btn.btn-primary" })
 </p>
-<table class="table table-bordered table-hover">
+<table id="drivers" class="table table-bordered table-hover">
     <thead>
-        <tr>
-            <th>Name</th>
-            <th>Phone Number</th>
-        </tr>
+    <tr>
+        <th>Name</th>
+        <th>Phone Number</th>
+        <th>Delete</th>
+    </tr>
     </thead>
     <tbody>
-    @foreach (var driver in Model)
+    @*@foreach (var driver in Model)
     {
         <tr>
             <td>@driver.Name</td>
             <td>@driver.PhoneNumber</td>
         </tr>
-    }
+    }*@
     </tbody>
 </table>
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            var table = $("#drivers").DataTable({
+                ajax: {
+                    url: "/api/driver",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name"
+
+                    },
+                    {
+                        data: "phoneNumber"
+                    },
+                    {
+                        data: "id",
+                        render: function(data) {
+                            return "<button class='btn-link js-delete' data-driver-id=" + data + ">Delete</button>";
+                        }
+                    }
+
+                ]
+            });
+
+            $("#drivers").on("click",".js-delete", function() {
+                var button = $(this);
+
+                bootbox.confirm("Are you sure you want to delete this driver?", function(result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/driver/" + button.attr("data-driver-id"),
+                            method: "DELETE",
+                            success: function() {
+                                table.row(button.parents("tr")).remove().draw();
+                            }
+                        });
+                    }
+                 });
+            });
+        });
+    </script>
+
+}
 
