Added edit to drivers and packages

--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Package/Index.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Package/Index.cshtml
@@ -38,7 +38,10 @@
                 },
                 columns: [
                     {
-                        data: "content"
+                        data: "content",
+                        render: function(data, type, package) {
+                            return "<a href='/package/edit/" + package.id + "'>" + package.content + "</a>";
+                        }
                         
                     },
                     {
