--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Driver/Index.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Driver/Index.cshtml
@@ -38,7 +38,10 @@
                 },
                 columns: [
                     {
-                        data: "name"
+                        data: "name",
+                        render: function (data, type, driver) {
+                            return "<a href='/driver/edit/" + driver.id + "'>" + driver.name + "</a>";
+                        }
 
                     },
                     {
