--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Shared/_NavBar.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Shared/_NavBar.cshtml
@@ -13,6 +13,7 @@
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("Packages", "Index", "Package")</li>
                 <li>@Html.ActionLink("Drivers", "Index", "Driver")</li>
+                <li>@Html.ActionLink("Deliveries", "Deliveries", "Delivery")</li>
             </ul>
         </div>
     </div>
