--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Delivery/Deliveries.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Delivery/Deliveries.cshtml
@@ -33,6 +33,7 @@
         directionsService = new google.maps.DirectionsService;
         directionsDisplay = new google.maps.DirectionsRenderer;
         model = @Html.Raw(Json.Encode(new List<Package>(Model.PackageClusters.ElementAt(0).AssignedPackages)));
+         console.log(model);
 
         var center = { lat: model[0].Latitude, lng: model[0].Longitude };
 
@@ -68,7 +69,7 @@
         var wayPts = [];
         for (var j = 0; j < model.length; j++) {
             wayPts.push({
-                location: { lat: model[j].Latitude, lng: model[j].Longitude }
+                location: model[j].Destination.toString()
             });
         }
         directionsService.route({
