Added function to add route to driver and save to db. Can also get route by driver id in console app

--- a/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Delivery/Deliveries.cshtml
+++ b/Transportsystem-GoogleMaps/Transportsystem-GoogleMaps/Views/Delivery/Deliveries.cshtml
@@ -83,7 +83,7 @@
                 destination: { lat: 59.246544, lng: 15.136656 },
 
                 waypoints: wayPts,
-                optimizeWaypoints: false,
+                optimizeWaypoints: true,
                 travelMode: 'DRIVING'
             },
             function(response, status) {
