--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Account/Register.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Account/Register.cshtml
@@ -25,8 +25,14 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+    </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.PersonalNumber, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.PersonalNumber, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
