--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Driver/Index.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Driver/Index.cshtml
@@ -13,6 +13,7 @@
     <tr>
         <th>Name</th>
         <th>Phone Number</th>
+        <th>Personal Number</th>
         <th>Delete</th>
     </tr>
     </thead>
@@ -40,6 +41,9 @@
                     },
                     {
                         data: "phoneNumber"
+                    },
+                    {
+                        data: "personalNumber"
                     },
                     {
                         data: "id",
