--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Package/PackageForm.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Package/PackageForm.cshtml
@@ -28,7 +28,7 @@
 
 @*<button onclick="savePackage()">Log</button>*@
 
-@*<script>
+<script>
     function savePackage() {
 
         var content = document.getElementById("Content").value;
@@ -37,17 +37,17 @@
 
         console.log(content + "        " + destination);
 
-        //$.ajax({
-        //    url: '/api/Package',
-        //    type: 'POST',
-        //    dataType: 'json',
-        //    contentType: 'application/json; charset=utf-8',
-        //    data: JSON.stringify(Login),
-        //    success: function (data) {
-        //        alert("Saved successfully");
-        //    }
-        //});
-    }*@
+    //    $.ajax({
+    //        url: '/api/Package',
+    //        type: 'POST',
+    //        dataType: 'json',
+    //        contentType: 'application/json; charset=utf-8',
+    //        data: JSON.stringify(Login),
+    //        success: function (data) {
+    //            alert("Saved successfully");
+    //        }
+    //    });
+    //}
  
 @*</script>*@
 
